# vibe-py-cookiecutter

./: .gitignore  Makefile  README.md  cookiecutter.json  pixi.toml  pyproject.toml
.github/workflows/: test-cookiecutter.yml
scripts/: dev.py  quality.py  test.py  utils.py
tests/: __init__.py  conftest.py  test_cookiecutter_generation.py  test_generated_project.py  test_script_functionality.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.jinja  README.md  pixi.toml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  release.yml  security.yml
{{cookiecutter.project_slug}}/docs/: mkdocs.yml
{{cookiecutter.project_slug}}/docs/content/: index.md  installation.md  quickstart.md
{{cookiecutter.project_slug}}/infrastructure/: docker-compose.test.yml.jinja
{{cookiecutter.project_slug}}/infrastructure/test-data/: init_mongodb.py  init_postgresql.py
{{cookiecutter.project_slug}}/scripts/: build.py  dev.py  docs.py  quality.py  test.py  test_db.py  test_db.py.jinja  utils.py
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/integration/: test_integration.py
{{cookiecutter.project_slug}}/tests/unit/: test_basic.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py
